<resources>
    <string name="app_name">ToDo_MySelf</string>
    <string name="menu_item_notes">Notes</string>
    <string name="menu_item_checklists">Checklists</string>
    <string name="menu_item_calender">Calender</string>
    <string name="menu_item_archive">Archive</string>
    <string name="menu_item_settins">Settings</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

</resources>
